# consilium

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  install.sh
.claude-plugin/: marketplace.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
core/: Cargo.toml
core/src/: auth.rs  catalog.rs  config.rs  confine.rs  doctor.rs  event.rs  lib.rs  main.rs  mcp.rs  models.rs  protocol.rs  quota.rs  recommend.rs  server.rs  sessions.rs  tokenizer.rs  wizard.rs
core/src/adapters/: claude.rs  codex.rs  gemini.rs  grok.rs  mod.rs
core/src/orchestrator/: auto.rs  changes.rs  conduct.rs  council.rs  eval.rs  json_extract.rs  mod.rs  operator.rs  progress.rs  prompts.rs  resilience.rs  review.rs  roles.rs  routing.rs  runner.rs  stagnation.rs  topology.rs  transcript.rs  verify.rs
core/src/safety/: commands.rs  fs.rs  git.rs  mod.rs  preflight.rs  trust.rs
core/tests/: auto_test.rs  conduct_test.rs  council_test.rs  eval_test.rs  fake_cli_output.jsonl  mcp_test.rs  preflight_test.rs  resilience_test.rs  review_test.rs  runner_test.rs  server_test.rs  sessions_test.rs  trust_test.rs  worktree_test.rs
core/tests/common/: mod.rs
core/tests/fixtures/claude/recorded/: basic.jsonl
core/tests/fixtures/codex/: basic_session.jsonl
core/tests/fixtures/codex/recorded/: basic.jsonl
core/tests/fixtures/gemini/: basic_response.json
core/tests/fixtures/gemini/recorded/: basic.json
core/tests/fixtures/grok/: basic_session.jsonl  error_case.jsonl  garbage_lines.jsonl
core/tests/fixtures/grok/recorded/: error_subscription.jsonl
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: main.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: commands.rs  desktop_config.rs  lib.rs  main.rs  server_lifecycle.rs
docs/: release-workflow.yml
docs/plans/: 2026-06-11-m1-engine-foundation.md  2026-06-12-m2a-deliberation.md  2026-06-12-m2b-execution.md  2026-06-16-m2c-resilience.md  2026-06-17-m3a-attached-mcp.md  2026-06-17-m3b-live-streaming.md  2026-06-17-m3c-cross-family-review.md  2026-06-17-p0-3-worker-blackboard.md  2026-06-17-p0-build-test-grounding.md  2026-06-17-p0-conductormemory.md  2026-06-18-m-eval-slice-a.md  (+5 more)
plugin/: .mcp.json
script/: record_fixtures.sh
ui/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
(+88 files in other folders)
