[package]
name = "consilium"
version = "0.1.0"
edition = "2021"
description = "Multi-agent orchestrator for subscription CLI agents"
license = "MIT"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
rand = "0.8"
rmcp = { version = "1.7.0", features = ["server", "macros", "transport-io", "schemars"] }
rusqlite = { version = "0.32", features = ["bundled"] }
schemars = "1.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
