[package]
name = "consilium"
version = "0.2.0"
edition = "2021"
description = "Multi-agent orchestrator for subscription CLI agents"
license = "MIT"
repository = "https://github.com/TemurTurayev/consilium"

[dependencies]
anyhow = "1"
axum = { version = "0.8.9", features = ["ws"] }
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
futures = "0.3"
futures-util = "0.3.32"
rand = "0.8"
rmcp = { version = "1.7.0", features = ["server", "macros", "transport-io", "schemars"] }
rusqlite = { version = "0.32", features = ["bundled"] }
schemars = "1.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
ts-rs = "12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(unix)'.dependencies]
rustix = { version = "1.1", features = ["fs", "process"] }

[dev-dependencies]
tokio-tungstenite = "0.29.0"
